@@ -6,7 +6,9 @@ v6.0.7 Nov 26 2014
 . (kfsone) Removed 'pill' options from local command
 . (kfsone) Friendly message instead of crash when local finds no stars
 . (kfsone) Added "--ignore-unkown" (-i) to "import"
-. (kfsone) "import" with a filename of "-" will present an Open File dialog
+. (kfsone) "import" without a filename will now present an open file dialog
+API:
+. (kfsone) You can now have optional positional arguments in command lines
 
 v6.0.6 Nov 25 2014
 . (kfsone) Issue#63 Trade calculator was not seeing some non-trade jumps
